fix:collapse

--- a/src/styles/components/ivue-collapse.scss
+++ b/src/styles/components/ivue-collapse.scss
@@ -60,6 +60,7 @@ $name: 'ivue-collapse';
 
       &-box {
         padding: var(--#{$name}-content-padding) 0;
+        word-break: break-all;
       }
     }
 
